<resources>
    <string name="app_name">TowerDefense</string>

    <string name="gold">28</string>
    <string name="action_settings">Settings</string>
    <string name="monster1"> Goblin 1</string>
    <string name="monster2"> Troll 1 </string>
    <string name="monster3"> Goblin 2</string>
    <string name="not_connected">You are not connected to a device</string>

    <string name="exemple">Coucou gobelin</string>
    <string name="yourIncome"> Your income : </string>
    <string name="yourIncomeValue"> 32 </string>
    <string name="oppIncome"> Opponent income : </string>
    <string name="oppIncomeValue"> 41 </string>
    <string name="yourLife"> Your life : </string>
    <string name="yourLifeValue"> 20 </string>
    <string name="OppLife"> Opponent life : </string>
    <string name="OppLifeValue"> 20 </string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to</string>
    <string name="title_not_connected">not connected</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>

    <!--  DeviceListActivity -->
    <string name="scanning">Scanning for devices...</string>
    <string name="select_device">Select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>

    <string name="no_reminder"> No game played </string>
    <string name="menu_insert"> Rajoute ton taf ! </string>
    <string name="menu_delete"> Hide your shame </string>
    <string name="winRate"> 1 </string>
    <string name="lossRate"> 1 </string>

    <string name="monster_goblin"> Goblin </string>
    <string name="monster_eye"> Eye </string>
    <string name="monster_devil"> Devil </string>
    <string name="monster_skeleton">  Skeleton </string>
    <string name="monster_eagle"> Eagle </string>

    <string name="monster_dwarf"> Dwarf</string>
    <string name="monster_robot"> Robot </string>
    <string name="monster_devil2"> Devilllls </string>
    <string name="monster_golem"> Golem </string>

    <string name="monster_gryphon"> Gryphon </string>
    <string name="monster_fairy"> Fairy </string>
    <string name="monster_dark_vador"> Darth Vader </string>
    <string name="monster_blue_dragon"> Blue dragon </string>

    <string name="monster_pikachu"> Pikachu </string>
    <string name="monster_spider"> Spider </string>
    <string name="monster_charizard"> Charizard </string>
    <string name="monster_wolf"> Wolf </string>
    <string name="title_activity_home_screen">HomeScreenActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_ensure_connect">EnsureConnectActivity</string>

</resources>
