<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/goblin"
        android:icon="@drawable/goblin_icon"
        android:title="@string/monster_goblin"
        android:onClick="onMenuItemClick"
        />

    <item
        android:id="@+id/eye"
        android:icon="@drawable/eye_icon"
        android:title="@string/monster_eye"
        android:onClick="onMenuItemClick"
        />


    <item
        android:id="@+id/devil"
        android:icon="@drawable/devil_icon"
        android:title="@string/monster_devil"
        android:onClick="onMenuItemClick"
        android:visible = "true"/>

    <item
        android:id="@+id/skeleton"
        android:icon="@drawable/skeleton_icon"
        android:title="@string/monster_skeleton"
        android:onClick="onMenuItemClick"
        android:visible = "true"/>

    <item
        android:id="@+id/wolf"
        android:icon="@drawable/wolf_icon"
        android:title="@string/monster_wolf"
        android:onClick="onMenuItemClick"
        android:visible = "true"/>

</menu>