<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/pikachu"
        android:icon="@drawable/pikachu_icon"
        android:title="@string/monster_pikachu"
        android:onClick="onMenuItemClick"
        android:visible = "true"/>

    <item
        android:id="@+id/spider"
        android:icon="@drawable/spider_icon"
        android:title="@string/monster_spider"
        android:onClick="onMenuItemClick"
        android:visible = "true"/>

    <item
        android:id="@+id/devil2"
        android:icon="@drawable/devil2_icon"
        android:title="@string/monster_devil2"
        android:onClick="onMenuItemClick"
        android:visible = "true"/>

    <item
        android:id="@+id/eagle"
        android:icon="@drawable/eagle_icon"
        android:title="@string/monster_eagle"
        android:onClick="onMenuItemClick"
        android:visible = "true"/>

</menu>